# continuous_clustering

./: CMakeLists.txt  README.md  build.Dockerfile  build_no_ros.Dockerfile  package.xml  vnc.Dockerfile
.github/workflows/: basic-build-ci.yaml  dependencies.repos  publish-docker-image.yaml
calibrations/: touareg_os32_left.json  touareg_os32_right.json
cfg/: ContinuousClustering.cfg
include/continuous_clustering/clustering/: continuous_clustering.hpp  continuous_range_image.hpp  general.hpp  pipeline_node.hpp  point_types.hpp
include/continuous_clustering/clustering/pipeline_nodes/: association.hpp  cluster_detection.hpp  coordinate_transformation.hpp  driver.hpp  ground_point_segmentation.hpp  pipeline_node.hpp  point_collection.hpp  point_filtering.hpp  range_image_generation.hpp
include/continuous_clustering/evaluation/: kitti_evaluation.hpp  kitti_loader.hpp
include/continuous_clustering/ros/: generic_points_driver.hpp  generic_points_input.hpp  kitti_input.hpp  ouster_driver.hpp  ouster_input.hpp  ros_utils.hpp  sensor_input.hpp  velodyne_driver.hpp  velodyne_input.hpp
include/continuous_clustering/utils/: command_line_parser.hpp  thread_pool.hpp
launch/: continuous_clustering_kitti_demo.launch  continuous_clustering_os32_left.launch  continuous_clustering_os32_right.launch  continuous_clustering_touareg.launch  continuous_clustering_vls128_roof.launch  demo_kitti_folder.launch  demo_kitti_rosbag.launch  demo_touareg.launch  sensor_generic.launch  sensor_kitti.launch  sensor_os32_left.launch  sensor_os32_right.launch  sensor_vls128_roof.launch  vehicle_kitti.launch  vehicle_touareg.launch
main/perception/continuous_clustering/: CMakeLists.txt  notes.txt  package.xml
main/perception/continuous_clustering/cfg/: ContinuousClustering.cfg
main/perception/continuous_clustering/include/continuous_clustering/: continuous_clustering.h  general.h  ouster_input.h  ros_sensor_input.h  ros_transform_synchronizer.h  sensor_input.h  thread_pool.h  thread_save_queue.h  velodyne_input.h
main/perception/continuous_clustering/include/continuous_clustering/clustering/: continuous_clustering.hpp  general.hpp  point_types.hpp
main/perception/continuous_clustering/include/continuous_clustering/evaluation/: kitti_evaluation.hpp  kitti_loader.hpp
main/perception/continuous_clustering/include/continuous_clustering/ros/: kitti_input.hpp  ouster_input.hpp  ros_sensor_input.h  ros_sensor_input.hpp  ros_transform_synchronizer.hpp  ros_utils.hpp  sensor_input.hpp  velodyne_input.hpp
main/perception/continuous_clustering/include/continuous_clustering/utils/: thread_pool.hpp  thread_save_queue.hpp
main/perception/continuous_clustering/launch/: continuous_clustering.launch  continuous_clustering_kitti.launch  continuous_clustering_os32_left.launch  continuous_clustering_os32_right.launch  continuous_clustering_touareg.launch  continuous_clustering_vls128_roof.launch
main/perception/continuous_clustering/rviz/: continuous_clustering.rviz  continuous_clustering_kitti_demo.rviz
main/perception/continuous_clustering/src/: continuous_clustering.cpp  continuous_clustering_node.cpp
main/perception/continuous_clustering/src/clustering/: continuous_clustering.cpp
main/perception/continuous_clustering/src/evaluation/: kitti_evaluation.cpp  kitti_loader.cpp
main/perception/continuous_clustering/src/ros/: continuous_clustering_node.cpp  ros_utils.cpp
main/perception/streaming_clustering/: CMakeLists.txt  notes.txt  package.xml
main/perception/streaming_clustering/cfg/: StreamingClustering.cfg
main/perception/streaming_clustering/include/streaming_clustering/: general.h  kitti_input.h  ouster_input.h  ros_sensor_input.h  ros_transform_synchronizer.h  sensor_input.h  streaming_clustering.h  thread_pool.h  thread_save_queue.h  velodyne_input.h
main/perception/streaming_clustering/include/streaming_clustering/velodyne_input/: velodyne_input.h
main/perception/streaming_clustering/launch/: streaming_clustering.launch  streaming_clustering_for_os32_left.launch  streaming_clustering_for_os32_right.launch  streaming_clustering_for_vls128_roof.launch  streaming_clustering_kitti.launch  streaming_clustering_os32_left.launch  streaming_clustering_vls128_roof.launch
main/perception/streaming_clustering/rviz/: streaming_clustering.rviz
main/perception/streaming_clustering/src/: streaming_clustering.cpp
main/perception/streaming_clustering/src/debugging/: plot_job_queue_sizes.py
rviz/: continuous_clustering_kitti_demo.rviz  demo_kitti_folder.rviz  demo_kitti_rosbag.rviz  demo_touareg.rviz  sensor_generic.rviz.in
scripts/: clone_repositories_and_install_dependencies.sh  install_dependencies_and_build.sh  install_ros.sh  kitti_odometry_downloader.sh  make_minimal_rosbag.py  semantic_kitti_downloader.sh  setup_workspace.sh  zip_euclidean_clustering_labels.sh
src/clustering/: continuous_clustering.cpp  continuous_range_image.cpp
src/evaluation/: kitti_evaluation.cpp  kitti_loader.cpp
src/ros/: continuous_clustering_node.cpp  ros_utils.cpp
src/tools/: gt_label_generator_tool.cpp  kitti_demo.cpp
urdf/: dummy_car.urdf
