<?xml version="1.0"?>
<package format="2">
    <name>continuous_clustering</name>
    <version>0.0.1</version>
    <description>The continuous_clustering package</description>
    <license>BSD</license>
    <maintainer email="andreas.reich@unibw.de">Andreas Reich</maintainer>
    <author email="andreas.reich@unibw.de">Andreas Reich</author>
    <url type="website">https://github.com/UniBwTAS/continuous_clustering</url>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>sensor_msgs</depend>
    <depend>grid_map_msgs</depend>
    <depend>dynamic_reconfigure</depend>

    <!-- sensor inputs -->
    <depend>velodyne_pointcloud</depend>
    <depend>ouster_ros</depend>
    <depend>ethernet_msgs</depend>

    <exec_depend>xacro</exec_depend>
    <exec_depend>rviz_range_image</exec_depend>
    <exec_depend>rviz_continuous_point_cloud</exec_depend>
    <exec_depend>rviz_colorize_point_cloud_by_label</exec_depend>
    <exec_depend>rosbag_panel</exec_depend>

</package>
