<?xml version="1.0"?>
<package format="2">
    <name>streaming_clustering</name>
    <version>0.0.0</version>
    <description>The streaming_clustering package</description>

    <!-- One maintainer tag required, multiple allowed, one person per tag -->
    <!-- Example:  -->
    <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
    <maintainer email="andreas.reich@unibw.de">anre</maintainer>


    <!-- One license tag required, multiple allowed, one license per tag -->
    <!-- Commonly used license strings: -->
    <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
    <license>TODO</license>


    <!-- Url tags are optional, but multiple are allowed, one per tag -->
    <!-- Optional attribute type can be: website, bugtracker, or repository -->
    <!-- Example: -->
    <!-- <url type="website">http://wiki.ros.org/streaming_clustering</url> -->


    <!-- Author tags are optional, multiple are allowed, one per tag -->
    <!-- Authors do not have to be maintainers, but could be -->
    <!-- Example: -->
    <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>sensor_msgs</depend>
    <depend>grid_map_msgs</depend>
    <depend>dynamic_reconfigure</depend>
    <depend>velodyne_pointcloud</depend>
    <depend>ouster_ros</depend>

    <exec_depend>vis_range_image</exec_depend>
    <exec_depend>vis_streaming_point_cloud</exec_depend>

</package>
